# phone_address_service

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: main.py
app/api/: routers.py  validators.py
app/api/endpoints/: __init__.py  address.py
app/core/: redis_client.py
app/crud/: address.py  base.py
app/schemas/: address.py
tests/: test_address_create.py
